<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Holo.Light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="176dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="67dp"
        android:background="@drawable/textview_border"
        android:paddingVertical="3dp"
        android:text="@string/landmark_scrapbook"
        android:textAlignment="center"
        android:textColor="#0277BD"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="143dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/textview_border"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/rushmore"
        android:contentDescription="@string/todo2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="174dp"
        android:layout_height="28dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textview_border"
        android:paddingVertical="3dp"
        android:text="@string/mount_rushmore"
        android:textAlignment="center"
        android:textColor="#0277BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/textview_border"
        android:paddingHorizontal="10dp"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/washingtonmonument"
        android:contentDescription="@string/todo3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="173dp"
        android:layout_height="27dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="83dp"
        android:background="@drawable/textview_border"
        android:paddingVertical="3dp"
        android:text="@string/washington_monument"
        android:textAlignment="center"
        android:textColor="#0277BD"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/textview_border"
        android:paddingHorizontal="10dp"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/portlandmainelighthouse"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="174dp"
        android:layout_height="29dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="82dp"
        android:background="@drawable/textview_border"
        android:paddingVertical="3dp"
        android:text="@string/portland_lighthouse"
        android:textAlignment="center"
        android:textColor="#0277BD"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>